--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -658,55 +658,58 @@ div.message {
     font-size: 24px; }
   .news-index .feed .date {
     color: #999999; }
-  .news-index .feed .body .clearfix::before {
-    content: " ";
-    /* Older browser do not support empty content */
-    clear: both;
-    display: block; }
-  .news-index .feed .body .clearfix-after::after {
-    content: " ";
-    /* Older browser do not support empty content */
-    clear: both;
-    display: block; }
-  .news-index .feed .body .objectblock {
-    margin: 0px 8px; }
-  .news-index .feed .body .objectblock.left {
-    float: left; }
-  .news-index .feed .body .objectblock.right {
-    float: right; }
-  .news-index .feed .body .admonitionblock td.icon .icon-warning:before {
-    content: "\f071";
-    color: #bf6900; }
-  .news-index .feed .body .admonitionblock td.icon img {
-    width: 60px; }
-  .news-index .feed .body .admonitionblock.warning {
-    background-color: #FFD0D0; }
-  .news-index .feed .body .good-news {
-    background-color: #D0D0FF;
-    padding: 8px 24px; }
-  .news-index .feed .body .good-news p {
-    text-align: center; }
-  .news-index .feed .body td.tableblock p {
-    margin: 4px 10px; }
-  .news-index .feed .body .tableblock.halign-right {
-    text-align: right; }
-  .news-index .feed .body .tableblock.halign-left {
-    text-align: left; }
-  .news-index .feed .body .tableblock.halign-center {
-    text-align: center; }
-  .news-index .feed .body table.tableblock {
-    border-collapse: collapse; }
-  .news-index .feed .body table.tableblock th {
-    border-bottom: 1px solid #000000;
-    padding: 0px 8px; }
-  .news-index .feed .body table.tableblock th {
-    border-bottom: 1px solid #000000; }
-  .news-index .feed .body #content {
-    padding: 0px 8px; }
-  .news-index .feed .body h2 {
-    text-align: center; }
-  .news-index .feed .body h3 {
-    text-align: center; }
+  .news-index .feed .body {
+    overflow: auto;
+    font-size: 12px; }
+    .news-index .feed .body .clearfix::before {
+      content: " ";
+      /* Older browser do not support empty content */
+      clear: both;
+      display: block; }
+    .news-index .feed .body .clearfix-after::after {
+      content: " ";
+      /* Older browser do not support empty content */
+      clear: both;
+      display: block; }
+    .news-index .feed .body .objectblock {
+      margin: 0px 8px; }
+    .news-index .feed .body .objectblock.left {
+      float: left; }
+    .news-index .feed .body .objectblock.right {
+      float: right; }
+    .news-index .feed .body .admonitionblock td.icon .icon-warning:before {
+      content: "\f071";
+      color: #bf6900; }
+    .news-index .feed .body .admonitionblock td.icon img {
+      width: 60px; }
+    .news-index .feed .body .admonitionblock.warning {
+      background-color: #FFD0D0; }
+    .news-index .feed .body .good-news {
+      background-color: #D0D0FF;
+      padding: 8px 24px; }
+    .news-index .feed .body .good-news p {
+      text-align: center; }
+    .news-index .feed .body td.tableblock p {
+      margin: 4px 10px; }
+    .news-index .feed .body .tableblock.halign-right {
+      text-align: right; }
+    .news-index .feed .body .tableblock.halign-left {
+      text-align: left; }
+    .news-index .feed .body .tableblock.halign-center {
+      text-align: center; }
+    .news-index .feed .body table.tableblock {
+      border-collapse: collapse; }
+    .news-index .feed .body table.tableblock th {
+      border-bottom: 1px solid #000000;
+      padding: 0px 8px; }
+    .news-index .feed .body table.tableblock th {
+      border-bottom: 1px solid #000000; }
+    .news-index .feed .body #content {
+      padding: 0px 8px; }
+    .news-index .feed .body h2 {
+      text-align: center; }
+    .news-index .feed .body h3 {
+      text-align: center; }
   .news-index .feed .news {
     border-bottom: 1px solid #dedede; }
     .news-index .feed .news:last-child {
@@ -718,74 +721,58 @@ div.message {
 .news-single .date {
   color: #999999; }
 
-.news-single .body .clearfix::before {
-  content: " ";
-  /* Older browser do not support empty content */
-  clear: both;
-  display: block; }
-
-.news-single .body .clearfix-after::after {
-  content: " ";
-  /* Older browser do not support empty content */
-  clear: both;
-  display: block; }
-
-.news-single .body .objectblock {
-  margin: 0px 8px; }
-
-.news-single .body .objectblock.left {
-  float: left; }
-
-.news-single .body .objectblock.right {
-  float: right; }
-
-.news-single .body .admonitionblock td.icon .icon-warning:before {
-  content: "\f071";
-  color: #bf6900; }
-
-.news-single .body .admonitionblock td.icon img {
-  width: 60px; }
-
-.news-single .body .admonitionblock.warning {
-  background-color: #FFD0D0; }
-
-.news-single .body .good-news {
-  background-color: #D0D0FF;
-  padding: 8px 24px; }
-
-.news-single .body .good-news p {
-  text-align: center; }
-
-.news-single .body td.tableblock p {
-  margin: 4px 10px; }
-
-.news-single .body .tableblock.halign-right {
-  text-align: right; }
-
-.news-single .body .tableblock.halign-left {
-  text-align: left; }
-
-.news-single .body .tableblock.halign-center {
-  text-align: center; }
-
-.news-single .body table.tableblock {
-  border-collapse: collapse; }
-
-.news-single .body table.tableblock th {
-  border-bottom: 1px solid #000000;
-  padding: 0px 8px; }
-
-.news-single .body table.tableblock th {
-  border-bottom: 1px solid #000000; }
-
-.news-single .body #content {
-  padding: 0px 8px; }
-
-.news-single .body h2 {
-  text-align: center; }
-
-.news-single .body h3 {
-  text-align: center; }
+.news-single .body {
+  overflow: auto;
+  font-size: 12px; }
+  .news-single .body .clearfix::before {
+    content: " ";
+    /* Older browser do not support empty content */
+    clear: both;
+    display: block; }
+  .news-single .body .clearfix-after::after {
+    content: " ";
+    /* Older browser do not support empty content */
+    clear: both;
+    display: block; }
+  .news-single .body .objectblock {
+    margin: 0px 8px; }
+  .news-single .body .objectblock.left {
+    float: left; }
+  .news-single .body .objectblock.right {
+    float: right; }
+  .news-single .body .admonitionblock td.icon .icon-warning:before {
+    content: "\f071";
+    color: #bf6900; }
+  .news-single .body .admonitionblock td.icon img {
+    width: 60px; }
+  .news-single .body .admonitionblock.warning {
+    background-color: #FFD0D0; }
+  .news-single .body .good-news {
+    background-color: #D0D0FF;
+    padding: 8px 24px; }
+  .news-single .body .good-news p {
+    text-align: center; }
+  .news-single .body td.tableblock p {
+    margin: 4px 10px; }
+  .news-single .body .tableblock.halign-right {
+    text-align: right; }
+  .news-single .body .tableblock.halign-left {
+    text-align: left; }
+  .news-single .body .tableblock.halign-center {
+    text-align: center; }
+  .news-single .body table.tableblock {
+    border-collapse: collapse; }
+  .news-single .body table.tableblock th {
+    border-bottom: 1px solid #000000;
+    padding: 0px 8px; }
+  .news-single .body table.tableblock th {
+    border-bottom: 1px solid #000000; }
+  .news-single .body #content {
+    padding: 0px 8px; }
+  .news-single .body h2 {
+    text-align: center; }
+  .news-single .body h3 {
+    text-align: center; }
 
 div.subscription {
   text-align: center; }
